--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,10 @@
     "@google-cloud/vision": "^2.4.0",
     "buffer": "^6.0.3",
     "express": "^4.17.1",
+    "express-formidable": "^1.2.0",
+    "fs": "0.0.1-security",
+    "lodash": "^4.17.21",
+    "multer": "^1.4.3",
     "path": "^0.12.7",
     "stream": "0.0.2",
     "url": "^0.11.0"
