--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   "main": "main.ts",
   "type": "commonjs",
   "scripts": {
+    "serve": "npx ts-node main.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack"
   },
@@ -12,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/storage": "^5.16.0",
     "@google-cloud/vision": "^2.4.0",
     "buffer": "^6.0.3",
     "express": "^4.17.1",
@@ -24,6 +26,9 @@
     "url": "^0.11.0"
   },
   "devDependencies": {
+    "@types/node": "^16.11.11",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.2",
     "webpack": "^5.64.4",
     "webpack-cli": "^4.9.1"
   }
