--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "type": "commonjs",
   "scripts": {
     "serve": "npx ts-node main.ts",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "watch": "npx webpack watch --config webpack.config.js",
+    "build": "npx webpack build --config webpack.config.js"
   },
   "keywords": [],
   "author": "",
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@types/node": "^16.11.11",
+    "html-webpack-plugin": "^5.5.0",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.2",
     "webpack": "^5.64.4",
