--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "main.ts",
   "type": "commonjs",
   "scripts": {
-    "serve": "npx ts-node main.ts",
-    "watch": "npx webpack watch --config webpack.config.js",
-    "build": "npx webpack build --config webpack.config.js"
+    "watch": "nodemon --exec \"npm run build && npm run serve\" ",
+    "build": "npm run tailwind && npx webpack build --config webpack.config.js",
+    "tailwind": "tailwindcss build -i resource/css/style.css -o dist/css/style.css",
+    "serve": "npx ts-node main.ts"
   },
   "keywords": [],
   "author": "",
@@ -26,11 +27,28 @@
     "url": "^0.11.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.16.0",
+    "@babel/preset-env": "^7.16.4",
     "@types/node": "^16.11.11",
+    "autoprefixer": "^10.4.0",
+    "babel-loader": "^8.2.3",
+    "css-loader": "^6.5.1",
     "html-webpack-plugin": "^5.5.0",
+    "nodemon": "^2.0.15",
+    "postcss": "^8.4.4",
+    "postcss-loader": "^6.2.1",
+    "style-loader": "^3.3.1",
+    "tailwindcss": "^2.2.19",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.2",
     "webpack": "^5.64.4",
     "webpack-cli": "^4.9.1"
+  },
+  "nodemonConfig": {
+    "ignore": [
+      "dist/*",
+      "logs/*"
+    ],
+    "ext": "ts, json, js, html, css"
   }
 }
